# AAFTF

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .zenodo.json  AAFTF.def  AGENTS.md  CHANGES.md  CITATION.cff  CLAUDE.md  DEVELOPERS.md  LICENSE  MANIFEST.in  README.md  RELEASE_NOTES.md  TODO.md  environment.yml  pixi.toml  pyproject.toml  requirements.txt  ruff.toml  setup.cfg  setup.py  test_pipeline.sh
AAFTF/: AAFTF_main.py  __init__.py  __version__.py  assemble.py  assess.py  blobpurge.py  contam_screen.py  depth.py  download.py  fcs_gx_purge.py  fcs_screen.py  filter.py  fix_tbl.py  mito-seed.fasta  mito.py  novoplasty-config.txt  pilon.py  pipeline.py  polish.py  resources.py  rmdup.py  sort.py  sourpurge.py  trim.py  utility.py  vecscreen.py  version.py  version_hardcode.py
AAFTF/data/: mito-seed.fasta
ci/recipe/: meta.yaml
docs/: conf.py  index.rst
patches/: polca.patch  polca.sh
scripts/: AAFTF  __init__.py  funannotate-contig_cleaner.py
tests/: 00_dipspades.sh  00_megahit.sh  00_spades_1trim.sh  00_spades_2trim.sh  00_spades_2trim_fastp1st.sh  00_spades_2trim_fastp1st_isolate.sh  00_spades_3trim.sh  00_spades_fastptrim.sh  00_spades_nomerge.sh  01_mito.sh  02_find_telomeres.sh  03_BUSCO.sh  03_make_summary.sh  04_make_summary.sh  BUSCO_test.sh  __init__.py  asm_stats.pl  asm_stats.tsv  conftest.py  dipspades.sh  find_telomeres.py  megahit.sh  spades.sh  spades_1trim.sh  spades_2trim.sh  spades_bbdukonly.sh  spades_bbduktrim.sh  spades_fastptrim.sh  spades_nomerge.sh  test_assemble.py  test_assess.py  test_cli.py  test_depth.py  test_filter.py  test_fix_tbl.py  test_pipeline_namespaces.py  test_polish.py  test_sort.py  test_sourpurge_nomatch.py  test_trim.py  (+2 more)
tests/augustus_config/cgp/: log_reg_parameters_arabidopsis.cfg  log_reg_parameters_default.cfg  log_reg_parameters_fly.cfg  log_reg_parameters_s_aureus.cfg
tests/augustus_config/extrinsic/: extrinsic-cgp.cfg  extrinsic.E.XNT.cfg  extrinsic.E.cfg  extrinsic.M.RM.E.W.cfg  extrinsic.M.RM.PB.cfg  extrinsic.ME.cfg  extrinsic.MEMS.cfg  extrinsic.MP.cfg  extrinsic.MPE.cfg  extrinsic.MT.cfg  extrinsic.cfg
tests/augustus_config/model/: constraints_shadow_partial.txt  constraints_shadow_partial_utr.txt  ovlp_len.pbl  ovlp_len_archaea.pbl  states_shadow.cfg  states_shadow_2igenic.cfg  states_shadow_bacterium.cfg  states_shadow_intronless.cfg  states_shadow_utr.cfg  states_shadow_utr_nc.cfg  states_singlestrand.cfg  (+14 more)
(+10 files in other folders)
