[project]
name = "AAFTF"
dynamic = ["version"]
authors = [
  { name="Jason Stajich", email="jasonstajich.phd@gmail.com" },
]
description = "Automatic Assembly For The Fungi - for automating genome assembly focused on short reads with cleanup, vector trimming and contam detection, resorting contigs by size and renaming, and summary statistics including telomere detection"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/stajichlab/AAFTF"
Issues = "https://github.com/stajichlab/AAFTF/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project.scripts]
AAFTF = "AAFTF.AAFTF_main:main"

# Version is derived from git tags (vX.Y.Z) plus the short commit hash.
# hatch-vcs (setuptools-scm under the hood) writes the resolved version into
# AAFTF/_version.py at build time, so installed packages carry a static version.
[tool.hatch.version]
source = "vcs"
raw-options = { version_scheme = "guess-next-dev", local_scheme = "node-and-date" }

[tool.hatch.build.hooks.vcs]
version-file = "AAFTF/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["AAFTF", "scripts"]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "unit: pure Python tests, no external tools required",
    "integration: requires external bioinformatics tools (minimap2, samtools, mosdepth, etc.)",
]
